# onward-journey

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CODEOWNERS  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: frontend-checks.yml  terraform-checks.yml
app/: .gitignore  LICENSE  README.md  agents.py  cag_cache.py  cag_interaction.json  candidate_scorer.py  chat_server.py  data.py  helpers.py  loaders.py  main.py  memory_store.py  metrics.py  new_main.py  plotting.py  preprocessing.py  prompt_guidance.py  pyproject.toml  slot_state.py  test.py  tools.py
app/agents/: __init__.py  base.py  factory.py
app/api/: oj_toggle_server.py  server.py
app/core/: __init__.py  data.py  engine.py  tools_registry.py
app/data/: cag_interaction.json
app/evaluation/: benchmarking.py  test.py
app/integrations/: __init__.py  genesys.py
app/output/: memory.json
app/resources/data/: cag_interaction.json  oj_rag_data.csv  prompt_policy.md
app/scripts/: benchmark_memory.py
frontend/: .gitignore  Makefile  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  app.scss
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  bedrock_knowledge_base.tf  iam.tf  locals.tf  opensearch.tf  providers.tf  s3.tf  variables.tf
infrastructure/application/: README.md  local.tfvars  providers.tf
infrastructure/bootstrap/: .terraform.lock.hcl  README.md  providers.tf  state.tf  terraform.tfstate
infrastructure/environments/: .example.config
mock_data/: mock_rag_data.csv
(+26 files in other folders)
